# SREBench

./: .gitignore  BLOG_POST.md  COMPLETION_SUMMARY.md  Dockerfile  ENHANCEMENTS.md  FINAL_VERIFICATION.py  PUSH_APPROVAL_CHECKLIST.md  README.md  SREBench_Training.ipynb  __init__.py  client.py  comprehensive_test.py  expert_task_solver.py  fix_bar_charts.py  fix_plot.py  generate_notebook.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_multi_agent_eval.py  test_all_12.py  test_live_deployment.py  validate_submission.sh  verify_enhancements.py
.github/workflows/: sync-space.yml
server/: __init__.py  app.py
sre-bench/: Dockerfile  README.md  RUBRIC_COMPLIANCE.py  TRAINING_GUIDE.md  VERIFICATION_GUIDE.md  __init__.py  agents.py  baseline.py  dashboard.html  gymnasium_env.py  index.html  quick_verify.sh  requirements.txt  test_comprehensive.py  test_solution_caching.py  train_agents.py  train_grpo.py  verify_all.sh  war_room.html
sre-bench/agents/: __init__.py  multi_agent_team.py
sre-bench/graders/: __init__.py  easy.py  expert_network.py  expert_replica.py  hard.py  medium.py  universal.py
sre-bench/src/: __init__.py  environment.py  infrastructure.py  k8s_adapter.py  models.py  server.py
sre_bench/: __init__.py  server.py
sre_bench/agents/: __init__.py  multi_agent_team.py
sre_bench/src/: __init__.py  environment.py  k8s_adapter.py
