[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-bench"
version = "1.0.0"
description = "Production incident response benchmark for SRE agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SREBench Team" }
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "requests==2.31.0",
    "openai>=2.7.2",
    "rich>=13.7.0",
    "langgraph>=0.2.0",
    "openenv-core>=0.2.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/MrDunky14/SREBench"
Repository = "https://github.com/MrDunky14/SREBench"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
